stylesheets/homePage.css
html,
body {
  background-image: url("/resources/images/background.jpg");
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;

  width: 100%;
  height: 100%;
  background-color: #060;
  color: #fff;
  text-align: center;
  text-shadow: 0 1px 3px rgba(0,0,0,.5);
}

.empty-space {
  height: 30%;
  padding-top: 30%;
  padding-bottom: 30%;
}

.address {
  font-size: 18px;
}

.preview {
  padding-top: 10%;
}

